fixed width 1200px now and also img no longer distorts

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 }
 img{
     width: 100%;
+    object-fit: cover;
     height: 100%;
 /*    make it max*/
 
@@ -20,7 +21,8 @@ body{
 
 }
 body>div{
-    width: 90%;
+
+    width: 1200px;
     align-self: center;
     justify-content: center;
     align-items: center;
